<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#F5E1FF"
    android:orientation="vertical"
    android:paddingLeft="16dp"
    android:paddingTop="16dp"
    android:paddingRight="16dp"
    android:paddingBottom="16dp"
    tools:context="com.example.rgr.MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/textViewTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="19dp"
            android:text="@string/list_of_lists"
            android:textColor="#8B008B"
            android:textSize="24sp"
            android:textStyle="bold" />

        <Spinner
            android:id="@+id/spinnerOptions"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="22dp"
            android:layout_marginTop="16dp"
            android:minHeight="48dp"
            android:padding="8dp"
            android:background="@drawable/rounded_border"
            android:backgroundTintMode="add"
            android:popupBackground="#FFFFFF"
            android:spinnerMode="dropdown"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/textViewDataType"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:text="@string/datatype"
            android:textColor="#8B008B"
            android:textSize="20sp" />

        <Switch
            android:id="@+id/switchGPS"
            android:layout_width="wrap_content"
            android:layout_height="48dp"
            android:layout_marginStart="18dp"
            android:layout_marginTop="16dp"
            android:text="@string/gps"
            android:textColor="#8B008B"
            android:thumbTint="#8B008B"
            android:trackTint="#FF69B4" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <EditText
            android:id="@+id/editTextValue"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:layout_marginBottom="12dp"
            android:layout_weight="1"
            android:autofillHints="123"
            android:hint="@string/enter_value"
            android:inputType="text"
            android:minHeight="48dp" />

        <EditText
            android:id="@+id/editTextIndex"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:layout_marginBottom="12dp"
            android:layout_weight="1"
            android:autofillHints="0"
            android:hint="@string/enter_index"
            android:inputType="numberSigned"
            android:minHeight="48dp" />
    </LinearLayout>

    <Button
        android:id="@+id/buttonExecute"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:layout_marginBottom="16dp"
        android:background="#8B008B"
        android:text="@string/execute"
        android:textColor="#FFFFFF" />

    <TextView
        android:id="@+id/textViewResult"
        android:layout_width="match_parent"
        android:layout_height="fill_parent"
        android:padding="8dp"
        android:text=""
        android:textColor="@color/black"
        android:background="@drawable/rounded_border"
        android:textSize="20sp"
        android:fontFamily="sans-serif-medium"
        android:textStyle="bold"/>

</LinearLayout>
